# desafio_nvpc

./: README.md  app.py  data.json  index.py  pyproject.toml  requirements.txt  teste.py
static/css/: style.css
templates/: i.html  index.html
