[tool.poetry]
name = "desafio-nvpc"
version = "0.0.1"
description = ""
authors = ["Benito Marculano Ribeiro <benito2016mr@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
Flask = "^2.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"