[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Benito Marculano Ribeiro <benito2016mr@gmail.com>"]
description = ""
name = "desafio-nvpc"
version = "0.0.1"
[tool.poetry.dependencies]
Flask = "^2.1.2"
python = "^3.8"
requests = "^2.27.1"
[tool.poetry.dev-dependencies]
